# weight-recorder

./: .gitignore  stack.yaml  weight-recorder.cabal
app/: Main.hs
src/Entity/: WeightRecord.hs
src/Model/: User.hs  WeightRecorder.hs
src/View/: Start.hs
src/Web/: Core.hs  WeightRecorder.hs
src/Web/Action/: Login.hs  NewRecord.hs  Register.hs
src/Web/View/: Main.hs
src/templates/: main.mustache  start.mustache
templates/: start.mustache
