name:                weight-recorder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/weight-recorder#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

data-files:          templates/start.mustache
                   , templates/main.mustache
                   , data/schema.sql
-- executable weight-recorder
  -- hs-source-dirs:      app
library
  hs-source-dirs:      src/
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     Entity.User
                     , Entity.WeightRecord
                     , Model.User
                     , Model.WeightRecorder
                     , Web.Action.Register
                     , Web.Action.Login
                     , Web.Action.NewRecord
                     , Web.Core
                     , Web.View.Main
                     , Web.View.Start
  build-depends:       base >= 4.7 && < 5
                     , Spock >= 0.11
                     , mtl
                     , text
                     , bcrypt
                     , bytestring
                     , filepath
                     , HDBC
                     , HDBC-sqlite3
                     , http-types
                     , Spock
                     , mustache
                     , persistable-record
                     , relational-query-HDBC
                     , relational-query
                     , resource-pool
                     , text
                     , time
                     , transformers
                     , wai
